--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div>
                         <img src="./imeges/img (6).jpg" alt="portrait" width="270px">
                         <h4>Михаил Ермаков</h4>
-                        px<p>UI Designer</p>
+                        <p>UI Designer</p>
                     </div>
                 </li>
             </ul>
