--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
             <li> <a href=""></a> Контакты</a></li>
         </ul>
        </nav>
-       <a href="mailto:info@example.com">info@example.com</a>
-       <p>+38 096 111 11 11</p>
+        <ul>
+            <li>
+            <a href="mailto:info@example.com">info@example.com</a>
+            </li>
+            <li>
+                <a href="tell:+38 096 111 11 11">+38 096 111 11 11</a>
+            </li>
+        </ul>
     </header>
     
     <main>
@@ -105,8 +111,8 @@
         <a href="">WebStudio</a>
         <address>
             <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <a href="mailto:info@example.com">info@example.com</a>.
-            <p>+38 099 111 11 11</p>
+            <a href="mailto:info@example.com">info@example.com</a> <br>
+            <a href="tell:+38 096 111 11 11">+38 096 111 11 11</a>
         </address>
     </footer>
 </body>
