--- a/index.html
+++ b/index.html
@@ -12,19 +12,16 @@
             <a href="">WebStudio</a>
 
         <ul>
-            <li> <a href=""></a> Студия</a></li>
-            <li> <a href=""></a> Портфолио</a></li>
-            <li> <a href=""></a> Контакты</a></li>
+            <li> <a href=""class="link"></a> Студия</a></li>
+            <li> <a href=""class="link"></a> Портфолио</a></li>
+            <li> <a href=""class="link"></a> Контакты</a></li>
         </ul>
        </nav>
-        <ul>
-            <li>
-            <a href="mailto:info@example.com">info@example.com</a>
-            </li>
-            <li>
-                <a href="tell:+38 096 111 11 11">+38 096 111 11 11</a>
-            </li>
-        </ul>
+        
+        <div>
+            <a href="mailto:info@example.com" class="mail">info@example.com</a>
+            <a href="tell:+38 096 111 11 11" class="tell">+38 096 111 11 11</a>
+        </div>
     </header>
     
     <main>
@@ -108,6 +105,7 @@
     </main>
 
     <footer>
+
         <a href="">WebStudio</a>
         <address>
             <p>г. Киев, пр-т Леси Украинки, 26</p>
