--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
          <section class="about">
             <section>
-                <h2></h2>
+                <h2>Особенности</h2>
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
@@ -53,7 +53,7 @@
                 </li>
             </ul>
             </section>
-            
+    
             <h2>Чем мы занимаемся</h2>
 
             <ul>
