--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header class="page-header">
        <nav class="page-nav">
-            <a href=""><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
+            <a href="" class="page-nav-logo"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
 
         <ul class="nav-list list">
             <li> <a href=""class="link accent">Студия</a></li>
@@ -34,8 +34,8 @@
     
     <main>
         <section class="hero">
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+            <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
+            <button type="button" class="hero-button"><span class="hero-button-text">Заказать услугу</span></button>
         </section>
 
          <section class="specifics">
