--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             
             <div class="page-header">
                 <ul class="nav-list list">
-                    <li> <a href="" class="link accent">Студия</a></li>
-                    <li> <a href="" class="link">Портфолио</a></li>
+                    <li> <a href="/index.html" class="link accent">Студия</a></li>
+                    <li> <a href="/portfolio.html" class="link">Портфолио</a></li>
                     <li> <a href="" class="link">Контакты</a></li>
                 </ul>
             </div>
