--- a/portfolio.html
+++ b/portfolio.html
@@ -19,34 +19,29 @@
 <body>
     <header>
         <nav class="page-nav">
-            <div class="page-header">
                 <a href="" class="page-nav-logo"><span class="logo-web">Web</span><span
                         class="logo-studio">Studio</span></a>
-            </div>
     
-            <div class="page-header">
                 <ul class="nav-list list">
                     <li> <a href="/index.html" class="link accent">Студия</a></li>
                     <li> <a href="" class="link">Портфолио</a></li>
                     <li> <a href="" class="link">Контакты</a></li>
                 </ul>
-            </div>
-            <div class="page-header">
+        </nav>
                 <ul class="page-header-registration list">
                     <li><a href="mailto:info@example.com" class="mail accent">info@example.com</a></li>
                     <li><a href="tell:+38 096 111 11 11" class="tell">+38 096 111 11 11</a></li>
                 </ul>
-            </div>
-        </nav>
+    
     </header>
 
     <main class="portfolio-main">
         <div class="nav">
-            <button type="button" class="nav-button"><span class="nav-button-text">Все</span></button>
-            <button type="button" class="nav-button"><span class="nav-button-text">Веб-сайты</span></button>
-            <button type="button" class="nav-button"><span class="nav-button-text">Приложения</span></button>
-            <button type="button" class="nav-button"><span class="nav-button-text">Дизайн</span></button>
-            <button type="button" class="nav-button"><span class="nav-button-text">Маркетинг</span></button>
+            <button type="button" class="nav-button">Все</button>
+            <button type="button" class="nav-button">Веб-сайты</button>
+            <button type="button" class="nav-button">Приложения</button>
+            <button type="button" class="nav-button">Дизайн</button>
+            <button type="button" class="nav-button">Маркетинг</button>
         </div>
 
         <ul class="project-cards list">
