--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"  rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 
    </head>
 
@@ -21,7 +21,7 @@
                         class="logo-studio">Studio</span></a>
     
                 <ul class="nav-list list">
-                    <li> <a href="/index.html" class="link accent">Студия</a></li>
+                    <li> <a href="./index.html" class="link accent">Студия</a></li>
                     <li> <a href="" class="link">Портфолио</a></li>
                     <li> <a href="" class="link">Контакты</a></li>
                 </ul>
