--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
         <section class="hero">
             <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
-            <button type="button" class="hero-button"><span class="hero-button-text">Заказать услугу</span></button>
+            <button type="button" class="hero-button">Заказать услугу</button>
         </section>
 
          <section class="specifics">
@@ -72,13 +72,13 @@
 
                 <ul class="works-list list">
                     <li>
-                        <img class="works-img" src="./imeges/img.jpg" alt="Обработка данных" width=370px>
+                        <img class="works-img" src="./images/img.jpg" alt="Обработка данных" width=370px>
                     </li>
                     <li>
-                        <img class="works-img" src="./imeges/phon.jpg" alt="Адаптация для мобильных устройств" width="370px">
+                        <img class="works-img" src="./images/phon.jpg" alt="Адаптация для мобильных устройств" width="370px">
                     </li>
                     <li>
-                        <img class="works-img" src="./imeges/planshet.jpg" alt="визуальный контент" width="370px">
+                        <img class="works-img" src="./images/planshet.jpg" alt="визуальный контент" width="370px">
                     </li>
                 </ul>
             </section> 
@@ -90,28 +90,28 @@
             <ul class="team-list list">
                 <li>
                     <div class="person-card">
-                        <img src="./imeges/demianenko.jpg" alt="portrait" width="270px">
+                        <img src="./images/demianenko.jpg" alt="portrait" width="270px">
                         <h3 class="team-name">Игорь Демьяненко</h3>
                         <p class="team-position">Product Designer</p>
                     </div>
                 </li>
                 <li>
                     <div class="person-card">
-                        <img src="./imeges/repina.jpg" alt="portrait" width="270px">
+                        <img src="./images/repina.jpg" alt="portrait" width="270px">
                         <h3 class="team-name">Ольга Репина</h3>
                         <p class="team-position">Frontend Developer</p>
                     </div>
                 </li>
                 <li>
                     <div class="person-card">
-                        <img src="./imeges/tarasov.jpg" alt="portrait" width="270px">
+                        <img src="./images/tarasov.jpg" alt="portrait" width="270px">
                         <h3 class="team-name">Николай Тарасов</h3>
                         <p class="team-position">Marketing</p>
                     </div>
                 </li>
                 <li>
                     <div class="person-card">
-                        <img src="./imeges/ermakov.jpg" alt="portrait" width="270px">
+                        <img src="./images/ermakov.jpg" alt="portrait" width="270px">
                         <h3 class="team-name">Михаил Ермаков</h3>
                         <p class="team-position">UI Designer</p>
                     </div>
