--- a/portfolio.html
+++ b/portfolio.html
@@ -45,21 +45,21 @@
         <ul class="project-cards list">
                 <li>
                 <div class="project">
-                    <img class="project-photo" src="./imeges/project1.jpg" alt="Технокряк" width="370px" height="294px">
+                    <img class="project-photo" src="./images/project1.jpg" alt="Технокряк" width="370px" height="294px">
                     <h3 class="project-name">Технокряк</h3>
                     <p class="project-about">Веб-сайт</p>
                 </div>
                 </li>
                 <li>
                 <div class="project">
-                    <img class="project-photo" src="./imeges/project2.jpg" alt="Poster" width="370px" height="294px">
+                    <img class="project-photo" src="./images/project2.jpg" alt="Poster" width="370px" height="294px">
                     <h3 class="project-name">Постер New Orlen vs Golden Star</h3>
                     <p class="project-about">Дизайн</p>
                 </div>
                 </li>
                 <li>
                 <div class="project">
-                    <img class="project-photo" src="./imeges/project3.jpg" alt="Seafood" width="370px" height="294px">
+                    <img class="project-photo" src="./images/project3.jpg" alt="Seafood" width="370px" height="294px">
                     <h3 class="project-name">Ресторан Seafood</h3>
                     <p class="project-about">Приложение</p>
                 </div>
@@ -67,42 +67,42 @@
                 <div class="brake"></div>
                 <li>
                 <div class="project">
-                    <img class="project-photo" src="./imeges/project4.jpg" alt="Prima" width="370px" height="294px">
+                    <img class="project-photo" src="./images/project4.jpg" alt="Prima" width="370px" height="294px">
                     <h3 class="project-name">Проэкт Prima</h3>
                     <p class="project-about">Маркетинг</p>
                 </div>
                 </li>
                 <li>
                 <div class="project">
-                    <img class="project-photo" src="./imeges/project5.jpg" alt="Boxes" width="370px" height="294px">
+                    <img class="project-photo" src="./images/project5.jpg" alt="Boxes" width="370px" height="294px">
                     <h3 class="project-name">Проэкт Boxes</h3>
                     <p class="project-about">Приложение</p>
                 </div>
                 </li>
                 <li>
                 <div class="project">
-                    <img class="project-photo" src="./imeges/project6.jpg" alt="Borders" width="370px" height="294px">
+                    <img class="project-photo" src="./images/project6.jpg" alt="Borders" width="370px" height="294px">
                     <h3 class="project-name">Inspiration has no Borders</h3>
                     <p class="project-about">Веб-сайт</p>
                 </div>
                 </li>
                 <li>
                 <div class="project">
-                    <img class="project-photo" src="./imeges/project7.jpg" alt="Limited Edition" width="370px" height="294px">
+                    <img class="project-photo" src="./images/project7.jpg" alt="Limited Edition" width="370px" height="294px">
                     <h3 class="project-name">Издание Limited Edition</h3>
                     <p class="project-about">Дизайн</p>
                 </div>
                 </li>
                 <li>
                 <div class="project">
-                    <img class="project-photo" src="./imeges/project8.jpg" alt="Lab" width="370px" height="294px">
+                    <img class="project-photo" src="./images/project8.jpg" alt="Lab" width="370px" height="294px">
                     <h3 class="project-name">Проект LAB</h3>
                     <p class="project-about">Маркетинг</p>
                 </div>
                 </li>
                 <li>
                 <div class="project">
-                    <img class="project-photo" src="./imeges/project9.jpg" alt="Growing Business" width="370px" height="294px">
+                    <img class="project-photo" src="./images/project9.jpg" alt="Growing Business" width="370px" height="294px">
                     <h3 class="project-name">Growing Business</h3>
                     <p class="project-about">Приложение</p>
                 </div>
