--- a/portfolio.html
+++ b/portfolio.html
@@ -34,6 +34,8 @@
     </header>
 
     <main class="portfolio-main">
+       <div>
+           <h1 hidden>Портфолио</h1>
         <div class="nav">
             <button type="button" class="nav-button">Все</button>
             <button type="button" class="nav-button">Веб-сайты</button>
@@ -46,21 +48,21 @@
                 <li>
                 <div class="project">
                     <img class="project-photo" src="./images/project1.jpg" alt="Технокряк" width="370px" height="294px">
-                    <h3 class="project-name">Технокряк</h3>
+                    <h2 class="project-name">Технокряк</h2>
                     <p class="project-about">Веб-сайт</p>
                 </div>
                 </li>
                 <li>
                 <div class="project">
                     <img class="project-photo" src="./images/project2.jpg" alt="Poster" width="370px" height="294px">
-                    <h3 class="project-name">Постер New Orlen vs Golden Star</h3>
+                    <h2 class="project-name">Постер New Orlen vs Golden Star</h2>
                     <p class="project-about">Дизайн</p>
                 </div>
                 </li>
                 <li>
                 <div class="project">
                     <img class="project-photo" src="./images/project3.jpg" alt="Seafood" width="370px" height="294px">
-                    <h3 class="project-name">Ресторан Seafood</h3>
+                    <h2 class="project-name">Ресторан Seafood</h2>
                     <p class="project-about">Приложение</p>
                 </div>
                 </li>
@@ -68,46 +70,47 @@
                 <li>
                 <div class="project">
                     <img class="project-photo" src="./images/project4.jpg" alt="Prima" width="370px" height="294px">
-                    <h3 class="project-name">Проэкт Prima</h3>
+                    <h2 class="project-name">Проэкт Prima</h2>
                     <p class="project-about">Маркетинг</p>
                 </div>
                 </li>
                 <li>
                 <div class="project">
                     <img class="project-photo" src="./images/project5.jpg" alt="Boxes" width="370px" height="294px">
-                    <h3 class="project-name">Проэкт Boxes</h3>
+                    <h2 class="project-name">Проэкт Boxes</h2>
                     <p class="project-about">Приложение</p>
                 </div>
                 </li>
                 <li>
                 <div class="project">
                     <img class="project-photo" src="./images/project6.jpg" alt="Borders" width="370px" height="294px">
-                    <h3 class="project-name">Inspiration has no Borders</h3>
+                    <h2 class="project-name">Inspiration has no Borders</h2>
                     <p class="project-about">Веб-сайт</p>
                 </div>
                 </li>
                 <li>
                 <div class="project">
                     <img class="project-photo" src="./images/project7.jpg" alt="Limited Edition" width="370px" height="294px">
-                    <h3 class="project-name">Издание Limited Edition</h3>
+                    <h2 class="project-name">Издание Limited Edition</h2>
                     <p class="project-about">Дизайн</p>
                 </div>
                 </li>
                 <li>
                 <div class="project">
                     <img class="project-photo" src="./images/project8.jpg" alt="Lab" width="370px" height="294px">
-                    <h3 class="project-name">Проект LAB</h3>
+                    <h2 class="project-name">Проект LAB</h2>
                     <p class="project-about">Маркетинг</p>
                 </div>
                 </li>
                 <li>
                 <div class="project">
                     <img class="project-photo" src="./images/project9.jpg" alt="Growing Business" width="370px" height="294px">
-                    <h3 class="project-name">Growing Business</h3>
+                    <h2 class="project-name">Growing Business</h2>
                     <p class="project-about">Приложение</p>
                 </div>
                 </li>
             </ul>
+        </div>
     </main>
 
     <footer>
