--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </ul>
         </nav>
                 <ul class="page-header-registration list">
-                    <li><a href="mailto:info@example.com" class="mail accent">info@example.com</a></li>
+                    <li><a href="mailto:info@example.com" class="mail">info@example.com</a></li>
                     <li><a href="tell:+38 096 111 11 11" class="tell">+38 096 111 11 11</a></li>
                 </ul>
      </header>
