--- a/portfolio.html
+++ b/portfolio.html
@@ -21,13 +21,13 @@
                         class="logo-studio">Studio</span></a>
     
                 <ul class="nav-list list">
-                    <li> <a href="./index.html" class="link accent">Студия</a></li>
-                    <li> <a href="" class="link">Портфолио</a></li>
+                    <li> <a href="./index.html" class="link">Студия</a></li>
+                    <li> <a href="" class="link accent">Портфолио</a></li>
                     <li> <a href="" class="link">Контакты</a></li>
                 </ul>
         </nav>
                 <ul class="page-header-registration list">
-                    <li><a href="mailto:info@example.com" class="mail accent">info@example.com</a></li>
+                    <li><a href="mailto:info@example.com" class="mail">info@example.com</a></li>
                     <li><a href="tell:+38 096 111 11 11" class="tell">+38 096 111 11 11</a></li>
                 </ul>
     
