--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
         </nav>
                 <ul class="page-header-registration list">
                     <li><a href="mailto:info@example.com" class="mail">info@example.com</a></li>
-                    <li><a href="tell:+38 096 111 11 11" class="tell">+38 096 111 11 11</a></li>
+                    <li><a href="tell:+380961111111" class="tell">+38 096 111 11 11</a></li>
                 </ul>
     
     </header>
@@ -47,21 +47,21 @@
         <ul class="project-cards list">
                 <li>
                 <div class="project">
-                    <img class="project-photo" src="./images/project1.jpg" alt="Технокряк" width="370px" height="294px">
+                    <img class="project-photo" src="./images/project1.jpg" alt="Технокряк" width="370" height="294">
                     <h2 class="project-name">Технокряк</h2>
                     <p class="project-about">Веб-сайт</p>
                 </div>
                 </li>
                 <li>
                 <div class="project">
-                    <img class="project-photo" src="./images/project2.jpg" alt="Poster" width="370px" height="294px">
+                    <img class="project-photo" src="./images/project2.jpg" alt="Poster" width="370" height="294">
                     <h2 class="project-name">Постер New Orlen vs Golden Star</h2>
                     <p class="project-about">Дизайн</p>
                 </div>
                 </li>
                 <li>
                 <div class="project">
-                    <img class="project-photo" src="./images/project3.jpg" alt="Seafood" width="370px" height="294px">
+                    <img class="project-photo" src="./images/project3.jpg" alt="Seafood" width="370" height="294">
                     <h2 class="project-name">Ресторан Seafood</h2>
                     <p class="project-about">Приложение</p>
                 </div>
@@ -69,42 +69,42 @@
                 <div class="brake"></div>
                 <li>
                 <div class="project">
-                    <img class="project-photo" src="./images/project4.jpg" alt="Prima" width="370px" height="294px">
+                    <img class="project-photo" src="./images/project4.jpg" alt="Prima" width="370" height="294">
                     <h2 class="project-name">Проэкт Prima</h2>
                     <p class="project-about">Маркетинг</p>
                 </div>
                 </li>
                 <li>
                 <div class="project">
-                    <img class="project-photo" src="./images/project5.jpg" alt="Boxes" width="370px" height="294px">
+                    <img class="project-photo" src="./images/project5.jpg" alt="Boxes" width="370" height="294">
                     <h2 class="project-name">Проэкт Boxes</h2>
                     <p class="project-about">Приложение</p>
                 </div>
                 </li>
                 <li>
                 <div class="project">
-                    <img class="project-photo" src="./images/project6.jpg" alt="Borders" width="370px" height="294px">
+                    <img class="project-photo" src="./images/project6.jpg" alt="Borders" width="370" height="294">
                     <h2 class="project-name">Inspiration has no Borders</h2>
                     <p class="project-about">Веб-сайт</p>
                 </div>
                 </li>
                 <li>
                 <div class="project">
-                    <img class="project-photo" src="./images/project7.jpg" alt="Limited Edition" width="370px" height="294px">
+                    <img class="project-photo" src="./images/project7.jpg" alt="Limited Edition" width="370" height="294">
                     <h2 class="project-name">Издание Limited Edition</h2>
                     <p class="project-about">Дизайн</p>
                 </div>
                 </li>
                 <li>
                 <div class="project">
-                    <img class="project-photo" src="./images/project8.jpg" alt="Lab" width="370px" height="294px">
+                    <img class="project-photo" src="./images/project8.jpg" alt="Lab" width="370" height="294">
                     <h2 class="project-name">Проект LAB</h2>
                     <p class="project-about">Маркетинг</p>
                 </div>
                 </li>
                 <li>
                 <div class="project">
-                    <img class="project-photo" src="./images/project9.jpg" alt="Growing Business" width="370px" height="294px">
+                    <img class="project-photo" src="./images/project9.jpg" alt="Growing Business" width="370" height="294">
                     <h2 class="project-name">Growing Business</h2>
                     <p class="project-about">Приложение</p>
                 </div>
@@ -123,7 +123,7 @@
                 <ul class="footer-list list">
                     <li class="footer-list-adress"><a href="address">г. Киев, пр-т Леси Украинки, 26</a></li>
                     <li class="footer-list-mail"><a href="mailto:info@example.com">info@example.com</a></li>
-                    <li class="footer-list-tell"><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+                    <li class="footer-list-tell"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
