--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
                 <ul class="page-header-registration list">
                     <li><a href="mailto:info@example.com" class="mail">info@example.com</a></li>
-                    <li><a href="tell:+38 096 111 11 11" class="tell">+38 096 111 11 11</a></li>
+                    <li><a href="tell:+380961111111" class="tell">+38 096 111 11 11</a></li>
                 </ul>
      </header>
     
@@ -41,30 +41,22 @@
                 <h2 hidden>Особенности</h2>
 
             <ul class="specifics-list list">
-                <div class="specifics-section">
-                    <li>
+                <li class="specifics-section">
                     <h3 class="specifics-title">Внимание к деталям</h3>
                     <p class="specifics-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                    </li> 
-                </div>
-                <div class="specifics-section">
-                    <li>
+                </li> 
+                <li class="specifics-section">
                     <h3 class="specifics-title">Пунктуальность</h3>
                     <p class="specifics-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                    </li>
-                </div>
-                <div class="specifics-section">
-                    <li>
+                </li>
+                    <li class="specifics-section">
                     <h3 class="specifics-title">Планирование</h3>
                     <p class="specifics-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                    </li>
-                </div>
-                <div class="specifics-section">
-                    <li>
+                </li>
+                <li class="specifics-section">
                         <h3 class="specifics-title">Современные технологии</h3>
                         <p class="specifics-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                    </li>
-                </div>
+                </li>
             </ul>
   
             <section  class="works">
@@ -72,13 +64,13 @@
 
                 <ul class="works-list list">
                     <li>
-                        <img class="works-img" src="./images/img.jpg" alt="Обработка данных" width=370px>
+                        <img class="works-img" src="./images/img.jpg" alt="Обработка данных" width=370>
                     </li>
                     <li>
-                        <img class="works-img" src="./images/phon.jpg" alt="Адаптация для мобильных устройств" width="370px">
+                        <img class="works-img" src="./images/phon.jpg" alt="Адаптация для мобильных устройств" width="370">
                     </li>
                     <li>
-                        <img class="works-img" src="./images/planshet.jpg" alt="визуальный контент" width="370px">
+                        <img class="works-img" src="./images/planshet.jpg" alt="визуальный контент" width="370">
                     </li>
                 </ul>
             </section> 
@@ -90,28 +82,28 @@
             <ul class="team-list list">
                 <li>
                     <div class="person-card">
-                        <img src="./images/demianenko.jpg" alt="portrait" width="270px">
+                        <img src="./images/demianenko.jpg" alt="portrait" width="270">
                         <h3 class="team-name">Игорь Демьяненко</h3>
                         <p class="team-position">Product Designer</p>
                     </div>
                 </li>
                 <li>
                     <div class="person-card">
-                        <img src="./images/repina.jpg" alt="portrait" width="270px">
+                        <img src="./images/repina.jpg" alt="portrait" width="270">
                         <h3 class="team-name">Ольга Репина</h3>
                         <p class="team-position">Frontend Developer</p>
                     </div>
                 </li>
                 <li>
                     <div class="person-card">
-                        <img src="./images/tarasov.jpg" alt="portrait" width="270px">
+                        <img src="./images/tarasov.jpg" alt="portrait" width="270">
                         <h3 class="team-name">Николай Тарасов</h3>
                         <p class="team-position">Marketing</p>
                     </div>
                 </li>
                 <li>
                     <div class="person-card">
-                        <img src="./images/ermakov.jpg" alt="portrait" width="270px">
+                        <img src="./images/ermakov.jpg" alt="portrait" width="270">
                         <h3 class="team-name">Михаил Ермаков</h3>
                         <p class="team-position">UI Designer</p>
                     </div>
@@ -129,7 +121,7 @@
                 <ul class="footer-list list">
                     <li class="footer-list-adress"><a href="address">г. Киев, пр-т Леси Украинки, 26</a></li>
                     <li class="footer-list-mail"><a href="mailto:info@example.com">info@example.com</a></li>
-                    <li class="footer-list-tell"><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+                    <li class="footer-list-tell"><a href="tel:+38 0961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
