--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <ul class="footer-list list">
                     <li class="footer-list-adress"><a href="address">г. Киев, пр-т Леси Украинки, 26</a></li>
                     <li class="footer-list-mail"><a href="mailto:info@example.com">info@example.com</a></li>
-                    <li class="footer-list-tell"><a href="tel:+38 0961111111">+38 096 111 11 11</a></li>
+                    <li class="footer-list-tell"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
