--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
     </header>
 
     <main class="portfolio-main">
-       <div>
+       <section>
            <h1 hidden>Портфолио</h1>
         <div class="nav">
             <button type="button" class="nav-button">Все</button>
@@ -109,7 +109,7 @@
                 </div>
                 </li>
             </ul>
-        </div>
+        </section>
     </main>
 
     <footer>
