img size update

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                 <ul class="works-list list">
                     <li>
-                        <img class="works-img" src="./images/img.jpg" alt="Обработка данных" width=370>
+                        <img class="works-img" src="./images/img.jpg" alt="Обработка данных" width="370">
                     </li>
                     <li>
                         <img class="works-img" src="./images/phon.jpg" alt="Адаптация для мобильных устройств" width="370">
